tests/baselines/reference/emitArrowFunctionWhenUsingArguments03(alwaysstrict=true,target=es2015).errors.txt
emitArrowFunctionWhenUsingArguments03.ts(1,5): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments03.ts (1 errors) ====
    var arguments;
        ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    var a = () => arguments;